@@ -1870,6 +1870,7 @@ include/rt/rt_tcl.h svneol=native#text/plain
 include/rt/search.h svneol=native#text/plain
 include/rt/seg.h svneol=native#text/plain
 include/rt/shoot.h svneol=native#text/plain
+include/rt/solid.h svneol=native#text/plain
 include/rt/soltab.h svneol=native#text/plain
 include/rt/space_partition.h svneol=native#text/plain
 include/rt/tie.h svneol=native#text/plain
@@ -1886,7 +1887,6 @@ include/rtgeom.h svneol=native#text/plain
 include/rtserver.h svneol=native#text/plain
 include/shadefuncs.h svneol=native#text/plain
 include/shadework.h svneol=native#text/plain
-include/solid.h svneol=native#text/plain
 include/spectrum.h svneol=native#text/plain
 include/sysv.h svneol=native#text/plain
 include/tclcad.h svneol=native#text/plain
