@@ -47,7 +47,7 @@
 #include "dm/dm_xvars.h"
 #include "fb.h"
 #include "fb/fb_wgl.h"
-#include "solid.h"
+#include "rt/solid.h"
 
 #include "./dm_private.h"
 
