@@ -1059,3 +1059,5 @@ s/(#[[:space:]]*include[[:space:]]+["<])tol\.h/#include "bn.h"\n#include "raytra
 	consolidate tol.h and rt/tol.h [7.25]
 s/(#[[:space:]]*include[[:space:]]+["<])tie\.h/\1rt\/tie.h/g
 	move tie.h to rt/tie.h [7.25]
+s/(#[[:space:]]*include[[:space:]]+["<])solid\.h/#include "raytrace.h"\n\1rt\/solid.h/g
+	move solid.h to rt/solid.h [7.25]
